[package]
name = "pi_pico_base"
version = "0.1.0"
authors = ["Jeremy Johnstone <github-pi_pico_base.rs@jeremyjohnstone.com>"]
edition = "2018"
homepage = "https://github.com/jsjohnst/pi_pico_base.rs"
description = "Sample base project for Pi Pico"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
panic-halt = "0.2.0"
rp2040-boot2 = "0.1.2"
